--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="Content" class="grid-container">
         <div id="profileIMG">
-            <img src="assests/new img.jpeg" alt="
+            <img src="assests/WhatsApp Image 2023-10-12 at 10.37.11 PM.jpeg" alt="
         Kaveri Asopa">      <!--Add your image link here!-->
 
         </div>
